# LearningProject

./: README.md
BlanceCar_Clion_cubemx/: .mxproject  CMakeLists.txt  tese1.ioc  项目基本资源(度盘860mb).txt
BlanceCar_Clion_cubemx/Core/Inc/: Sr04.h  encoder.h  motor.h  oled.h  oledfont.h  pid.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
BlanceCar_Clion_cubemx/Core/Src/: Sr04.c  encoder.c  gpio.c  inv_mpu.c  main.c  motor.c  mpu6050.c  oled.c  pid.c  stm32f1xx_it.c  tim.c  usart.c
BlanceCar_Clion_cubemx/MDK-ARM/: startup_stm32f103xb.lst  tese1.uvguix.MECHREVO  tese1.uvoptx  tese1.uvprojx
BlanceCar_Clion_cubemx/MDK-ARM/RTE/_tese1/: RTE_Components.h
BlanceCar_Clion_cubemx/MDK-ARM/tese1/: gpio.crf  gpio.d  i2c.crf  i2c.d  iic.crf  iic.d  inv_mpu.crf  inv_mpu.d  inv_mpu_dmp_motion_driver.crf  inv_mpu_dmp_motion_driver.d  main.crf  main.d  mpu6050.crf  mpu6050.d  oled.crf  oled.d  sr04.crf  sr04.d  startup_stm32f103xb.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.crf  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_i2c.crf  stm32f1xx_hal_i2c.d  stm32f1xx_hal_msp.crf  stm32f1xx_hal_msp.d  stm32f1xx_hal_pwr.crf  (+22 more)
BlanceCar_Clion_cubemx/秋水小车 - 初版/User/: main.c
BlanceCar_Clion_cubemx/秋水平衡车 - 测试用/Hardware/: Encoder.c  LED.c  LED.h  MPU6050.c  MPU6050.h  Motor.c  MyI2C.c  PWM.c  Serial.c  Serial.h
BlanceCar_Clion_cubemx/秋水平衡车 - 测试用/Listings/: project.map
BlanceCar_Clion_cubemx/秋水平衡车 - 测试用/Objects/: led.crf  led.d  main.d  motor.d  mpu6050.crf  mpu6050.d  myi2c.crf  myi2c.d  oled_data.crf  oled_data.d  pid.crf  project.build_log.htm  project.lnp  timer.d
BlanceCar_Clion_cubemx/秋水平衡车 - 测试用/System/: PID.c
UpStanding_Car(370) -FreeRTOS/: !!!!!!!!!!!安排.txt  .mxproject  OLED.ioc  freertos.txt
UpStanding_Car(370) -FreeRTOS/Core/Inc/: stm32f1xx_it.h
UpStanding_Car(370) -FreeRTOS/MDK-ARM/: OLED.uvguix.MECHREVO  OLED.uvoptx  OLED.uvprojx  startup_stm32f103xb.lst
UpStanding_Car(370) -FreeRTOS/MyCode/: mpu6050.c
UpStanding_Car(370) -FreeRTOS/Task/: ble_task.c  ble_task.h  common.h  control_task.c  control_task.h  ui_task.c  ui_task.h
秋水平衡车 - 测试用/: project.uvguix.MECHREVO  project.uvoptx  project.uvprojx
秋水平衡车 - 测试用/Hardware/: BlueSerial.c  Motor.h  PWM.h
秋水平衡车 - 测试用/Objects/: blueserial.crf  blueserial.d  encoder.crf  encoder.d  main.crf  motor.crf  oled.crf  oled.d  pid.d  project.axf  project.htm  project_Target 1.dep  pwm.crf  serial.crf  serial.d  timer.crf
秋水平衡车 - 测试用/System/: PID.h  Timer.c
秋水平衡车 - 测试用/User/: main.c
秋水平衡车 - 测试用/项目前/: 资源分配.txt
(+108 files in other folders)
